[workspace]
members = [
    "crates/api",
    "crates/store",
    "crates/seeder"
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
sqlx = { version = "0.8.6", default-features =  false, features = ["runtime-tokio", "postgres", "macros", "chrono", "rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rust_decimal = { version = "1.36", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
bip39 = { version = "2.1.0", features = ["rand"] }
solana-sdk = "2.3"