[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true}
axum = { workspace = true}
sqlx = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
dotenvy = { workspace = true}
store = { path = "../store" }
jsonwebtoken ={ workspace = true}
chrono = { workspace = true }